first-section-done

--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gears</title>
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/e17c870602.js" crossorigin="anonymous"></script>
+    <!-- stylesheet -->
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    
+    <main>
+        <div class="first-section">
+            <div class="section-info">
+                <h1 class="section-title">Start your Journey as Influencer</h1>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet, harum quibusdam commodi vitae sunt quo, voluptatem hic perferendis saepe facere ipsam asperiores necessitatibus quam quisquam incidunt id illum maxime dicta.</p>
+                <a class="link-button" href="">Preebook now  <i class="fa-solid fa-arrow-right-long"></i></a>
+            </div>
+            <div class="section-image">
+                <img src="images/main-camera.png" alt="">
+            </div>
+        </div>
+        <section class="e-commerce">
+            <div class="e-commerce-logo">
+                <div class="logo"><img src="logos/Alibaba.svg" alt=""></div>
+                <div class="logo"><img src="logos/Amazon.svg" alt=""></div>
+                <div class="logo"><img src="logos/Daraz.pk Logo.svg" alt=""></div>
+                <div class="logo"><img src="logos/Ebay.svg" alt=""></div>
+                <div class="logo"><img src="logos/Rakuten.svg" alt=""></div>
+                <div class="logo"><img src="logos/Target.svg" alt=""></div>
+                <div class="logo"><img src="logos/Walmart.svg" alt=""></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
