--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
                 <img src="images/main-camera.png" alt="">
             </div>
         </div>
+        <!-- first section end -->
+        <!-- e-commerce section start -->
         <section class="e-commerce">
             <div class="e-commerce-logo">
                 <div class="logo"><img src="logos/Alibaba.svg" alt=""></div>
@@ -31,6 +33,175 @@
                 <div class="logo"><img src="logos/Rakuten.svg" alt=""></div>
                 <div class="logo"><img src="logos/Target.svg" alt=""></div>
                 <div class="logo"><img src="logos/Walmart.svg" alt=""></div>
+            </div>
+        </section>
+        <!-- e-commerce section end -->
+        <!-- Third section or population collection start -->
+        <section class="third-section">
+            <h2 class="third-section-title">Population Collection</h2>
+            <div class="population-collection">
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/tripod.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Flex Tripod</h3>
+                        <p>$50.48</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/mic.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>microphone</h3>
+                        <p>$120.25</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/airpod.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Airbuds</h3>
+                        <p>$100.00</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/drone.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Drone</h3>
+                        <p>$980.25</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/lights.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Light Setup</h3>
+                        <p>$1200.00</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/setup.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Photoshoot set</h3>
+                        <p>$820.40</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/camera.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Vlogging Camera</h3>
+                        <p>$1800.80</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/single-light.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Green Screen</h3>
+                        <p>$25.48</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
+                <article class="item-info">
+                    <div class="item">
+                        <img src="images/action.png" alt="">
+                    </div>
+                    <div class="item-detail">
+                        <h3>Action Camera</h3>
+                        <p>$380.00</p>
+                        <span>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star filled"></i>
+                            <i class="fa-solid fa-star-half-stroke empty"></i>
+                            <span class="rating-text">4.99</span>
+                        </span>
+                        <p>Wordwide shifting available Buyers protection possible!</p>
+                    </div>
+                </article>
             </div>
         </section>
     </main>
