--- a/index.html
+++ b/index.html
@@ -203,6 +203,9 @@
                     </div>
                 </article>
             </div>
+            <div class="see-more-button">
+                <a href="">See More<i class="fa-solid fa-arrow-right-long"></i></a>
+            </div>
         </section>
     </main>
 </body>
