--- a/index.html
+++ b/index.html
@@ -207,6 +207,27 @@
                 <a href="">See More<i class="fa-solid fa-arrow-right-long"></i></a>
             </div>
         </section>
+        <section class="featured-section">
+            <div class="first-section">
+                <div class="section-image">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="section-info">
+                    <h1 class="section-title">Start your Journey as Influencer</h1>
+                    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet, harum quibusdam commodi vitae sunt quo, voluptatem hic perferendis saepe facere ipsam asperiores necessitatibus quam quisquam incidunt id illum maxime dicta.</p>
+                    <a class="link-button" href="">Preebook now  <i class="fa-solid fa-arrow-right-long"></i></a>
+                </div>
+            </div>
+            <!-- <article class="featured">
+                <div class="half-width">
+                    <img src="images/gear.png" alt="">
+                </div>
+                <div class="half-width">
+                    <h1>Featured products at one place</h1>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quos culpa repudiandae voluptate tempora ducimus a ipsam autem atque nostrum, numquam, necessitatibus sapiente rem libero! Nesciunt suscipit veniam voluptatem tenetur.</p>
+                </div>
+            </article> -->
+        </section>
     </main>
 </body>
 </html>
